First two chapters are tested (#44)
* Chapter 1 testing done

* Second Chapter almost done

* Chapter 2 is finished

* Done with Chapter 1 and Chapter 2

* Included commit changes from Main branch

* Copy the file

---------

Co-authored-by: Sarvesh Pandit <sapandit@redhat.com>

--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -12,7 +12,7 @@ This course is the *first* in a series of *five* courses about Red Hat OpenShift
 
 NOTE: After you have completed all the courses in the learning path, you can attempt the https://github.com/RedHatQuickCourses/rhods-qc-apps/tree/main/7.hands-on-lab["Workshop final hands-on lab"], that tests your understanding of the concepts taught in all the courses.
 
-IMPORTANT: The hands-on labs in this course were created and tested with RHOAI v2.4. Labs should mostly work without any changes in minor dot release upgrades of the product. Please open issues in this repository if you run into any issues.
+IMPORTANT: The hands-on labs in this course were created and tested with RHOAI v2.8.0. Labs should mostly work without any changes in minor dot release upgrades of the product. Please open issues in this repository if you run into any issues.
 
 == Authors
 
@@ -24,9 +24,9 @@ The PTL team acknowledges the valuable contributions of the following Red Hat as
 
 == Classroom Environment
 
-This introductory course has a few, simple hands-on labs. You will use the https://demo.redhat.com/catalog?search=openshift+data+science&item=babylon-catalog-prod%2Fsandboxes-gpte.ocp4-workshop-rhods-base-aws.prod[Base RHODS on AWS] catalog item in the Red Hat Demo Platform (RHDP) to run the hands on exercises in this course.
+This introductory course has a few, simple hands-on labs. You will use the https://demo.redhat.com/catalog?search=openshift+data+science&item=babylon-catalog-prod%2Fsandboxes-gpte.ocp4-workshop-rhods-base-aws.prod[Base RHOAI on AWS] catalog item in the Red Hat Demo Platform (RHDP) to run the hands on exercises in this course.
 
-For Red Hat partners who do not have access to RHDP, provision an environment using the https://console.redhat.com/application-services/data-science[Red Hat Hybrid Cloud Console^]. Unfortunately, the labs will NOT work on the trial sandbox environment. You need to provision an OpenShift AI cluster on-premises, or in the supported cloud environments by following the product documentation at https://access.redhat.com/documentation/en-us/red_hat_openshift_ai/2024.
+For Red Hat partners who do not have access to RHDP, provision an environment using the https://console.redhat.com/application-services/data-science[Red Hat Hybrid Cloud Console^]. Unfortunately, the labs will NOT work on the trial sandbox environment. You need to provision an OpenShift AI cluster on-premises, or in the supported cloud environments by following the product documentation at https://access.redhat.com/documentation/en-us/red_hat_openshift_ai/2024[Product Documentation for Red Hat OpenShift AI 2024].
 
 The other courses in the learning path use a different classroom. Inspect the prerequisites and classroom requirements in the respective individual courses.
 
@@ -38,10 +38,10 @@ For this introductory course, basic experience with Red{nbsp}Hat OpenShift is re
 
 The overall objectives of this introductory course include:
 
-* Become familiar with the general architecture and main features of Red{nbsp}Hat OpenShift AI
-* Accessing and logging in to the Red{nbsp}Hat OpenShift AI web console
-* Creating, sharing and deleting data science projects
-* Creating a Workbench within a data science project
-* Creating and deleting data connections
-* Creating, importing (from Git repositories) and sharing Jupyter notebooks
-* Install Python packages in your Jupyter notebooks
+* Familiarize with the general architecture and main features of Red{nbsp}Hat OpenShift AI
+* Access and log in to the Red{nbsp}Hat OpenShift AI web console
+* Create, share and delete data science projects
+* Create a workbench within a data science project
+* Create and delete data connections
+* Create, import (from Git repositories) and share Jupyter Notebook
+* Install Python packages in your Jupyter Notebook
